Fix nav's &lsaquo; alignment.

--- a/src/user/nav/nav.less
+++ b/src/user/nav/nav.less
@@ -36,7 +36,7 @@ nav {
 
   .nbsp, .lsaquo, .icon { display: inline-block; vertical-align: middle; }
 
-  .nbsp, .lsaquo { margin: 0 -0.125em; padding-bottom: 0.25em; font-size: 1.75em; line-height: 0.75em; font-family: monospace; }
+  .nbsp, .lsaquo { margin: 0 -0.125em; padding-bottom: 0.125em; font-size: 1.75em; line-height: 0.75em; font-family: monospace; }
   .icon { width: 1.75em; height: 1.75em; }
 
   .hide-menu {
